--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "furima_”テックマスターのuser_id”",
+  "name": "furima-27291",
   "private": true,
   "dependencies": {
     "@rails/ujs": "^6.0.0-alpha",
