--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "furima-27291",
   "private": true,
   "dependencies": {
-    "@rails/ujs": "^6.0.0-alpha",
-    "turbolinks": "^5.2.0",
+    "@rails/actioncable": "^6.0.0-alpha",
     "@rails/activestorage": "^6.0.0-alpha",
-    "@rails/actioncable": "^6.0.0-alpha"
+    "@rails/ujs": "^6.0.0-alpha",
+    "@rails/webpacker": "5.4.3",
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "webpack-dev-server": "^3"
+  },
+  "engines": {
+    "node": "14.19.1"
+  }
 }
